--- a/public/src/share/largeContent.css
+++ b/public/src/share/largeContent.css
@@ -24,7 +24,7 @@
  ********************************/
 .topContents {
   width: 100%;
-  height: 100%;
+  flex-grow: 1;
   display: flex;
 }
 
@@ -32,26 +32,21 @@
  * leftContents
  ********************************/
 .leftContents {
-  width: 100%;
-  height: 100%;
-  margin-top: 1rem;
+  width: 50%;
   display: flex;
   flex-direction: column;
   align-items: center;
 }
 
 .gear {
-  width: 95%;
-  height: 95%;
+  margin: 0.5rem;
 }
 
 /********************************
  * rightContents
  ********************************/
 .rightContents {
-  width: 100%;
-  height: 100%;
-  margin-top: 1rem;
+  width: 50%;
   display: flex;
   flex-direction: column;
 }
@@ -61,7 +56,7 @@
  ********************************/
 .bottomContents {
   width: 100%;
-  height: 12rem;
+  height: 10rem;
   display: flex;
   justify-content: space-between;
   align-items: center;
@@ -74,7 +69,7 @@
   height: 100%;
   margin-left: 1rem;
   display: flex;
-  align-items: flex-end;
+  align-items: center;
 }
 
 .fuelIcon {
@@ -146,5 +141,5 @@
   height: 100%;
   margin-right: 1rem;
   display: flex;
-  align-items: flex-end;
+  align-items: center;
 }
