--- a/public/src/share/smallContent.css
+++ b/public/src/share/smallContent.css
@@ -11,10 +11,10 @@
  ********************************/
 .topContents {
   width: 100%;
-  height: 100%;
-  margin-top: 1rem;
+  flex-grow: 1;
   display: flex;
   flex-direction: column;
+  justify-content: center;
   align-items: center;
 }
 
@@ -23,7 +23,7 @@
  ********************************/
 .bottomContents {
   width: 100%;
-  height: 12rem;
+  height: 7.5rem;
   display: flex;
   align-items: center;
 }
