--- a/public/src/menu/menuItem.css
+++ b/public/src/menu/menuItem.css
@@ -27,6 +27,7 @@
   font-size: 1.5rem;
   font-family: 'Oswald', sans-serif;
   text-align: center;
+  color: #e3e4e5;
   transform: skewX(12deg);
 }
 
