--- a/public/src/contents/engine/engine.css
+++ b/public/src/contents/engine/engine.css
@@ -186,6 +186,6 @@
 .water > .valueRecords > .valueRecord > div > .unit > span,
 .fuel > .valueRecords > .valueRecord > div > .unit > span {
   color: #ffffff;
-  font-size: 1.5rem;
-  font-family: 'Inconsolata', monospace;
+  font-size: 1rem;
+  font-family: 'Oswald', sans-serif;
 }
